# PyHelpers

./: .gitignore  README.md  pyproject.toml
conf/: CONFIGS.md  config.yaml
conf/dataset/result/: de_a2_test_raw.yaml
conf/model/: gpt_3.5_turbo.yaml  gpt_4.yaml
conf/prompt/: english.yaml  german.yaml
conf/setup/: example_generation.yaml  notebook_example.yaml
data/results/: de_a2_test.json
data/words/: de_a2_test.csv
examples/: generation_example.py  notebook_example.ipynb
src/: config_helpers.py  helpers.py  loggers.py  read_write.py
src/api/: README.md  api.py  prompter.py
src/api/handler/: error_handlers.py  grazie_api.py  handler.py  response_processors.py  response_validators.py
